codepkg/objects/Transmittal__c.object
<CustomObject>
    <description>To store the Transmittal of Payment request.</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <description>Primary Authorized Agent Account Name from Project Role(From Contact Role).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Primary Authorized Agent Account Name from Project Role(From Contact Role).</inlineHelpText>
        <label>Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccrualEncumbranceNo__c</fullName>
        <description>Accrual / Encumbrance Number(Payment Request).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Accrual / Encumbrance Number(Payment Request).</inlineHelpText>
        <label>Accrual / Encumbrance No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adjusted_For_Offset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Offset Transmittal from/on which the Amount is adjusted.</description>
        <inlineHelpText>Lookup to Offset Transmittal from/on which the Amount is adjusted.</inlineHelpText>
        <label>Adjusted For(Offset)</label>
        <referenceTo>Transmittal__c</referenceTo>
        <relationshipLabel>Transmittals</relationshipLabel>
        <relationshipName>Transmittals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Admin_Share_Amount__c</fullName>
        <description>&quot;State Admin Share&quot; of the Payment Request.</description>
        <inlineHelpText>&quot;State Admin Share&quot; of the Payment Request.</inlineHelpText>
        <label>Admin Share Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Available__c</fullName>
        <description>Total Amount available on the Project.</description>
        <inlineHelpText>Total Amount available on the Project.</inlineHelpText>
        <label>Amount Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Obligated__c</fullName>
        <description>State Cost Share or Federal Cost Share from Payment Request.</description>
        <inlineHelpText>State Cost Share or Federal Cost Share from Payment Request.</inlineHelpText>
        <label>Amount Obligated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ApplicantName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Obligated Sub Recipient of Project.</description>
        <inlineHelpText>Obligated Sub Recipient of Project.</inlineHelpText>
        <label>Applicant Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transmittals</relationshipLabel>
        <relationshipName>Transmittals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ApplicantNumber__c</fullName>
        <description>Sub Recipient FIPS Number from Project(From Account).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Sub Recipient FIPS Number from Project(From Account).</inlineHelpText>
        <label>Applicant Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovedAmount__c</fullName>
        <description>(Federal or State) Approved Payment Amount(Payment Request).</description>
        <inlineHelpText>(Federal or State) Approved Payment Amount(Payment Request).</inlineHelpText>
        <label>Approved Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <description>Date on Which PR got Approved by Manager</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date on Which PR got Approved by Manager</inlineHelpText>
        <label>Approved Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Copy of Notes field on Payment Request</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Copy of Notes field on Payment Request</inlineHelpText>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactMailingCity__c</fullName>
        <description>Primary Authorized Agent Mailing City from Project Role(From Contact Role).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Primary Authorized Agent Mailing City from Project Role(From Contact Role).</inlineHelpText>
        <label>Mailing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMailingCountry__c</fullName>
        <description>Primary Authorized Agent Country from Project Role(From Contact Role).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Primary Authorized Agent Country from Project Role(From Contact Role).</inlineHelpText>
        <label>Mailing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMailingPostalCode__c</fullName>
        <description>Primary Authorized  Agent Mailing Postal Code from Project Role(From Contact Role).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Primary Authorized  Agent Mailing Postal Code from Project Role(From Contact Role).</inlineHelpText>
        <label>Mailing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMailingState__c</fullName>
        <description>Primary Authorized Agent Mailing State from Project Role(From Contact Role).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Primary Authorized Agent Mailing State from Project Role(From Contact Role).</inlineHelpText>
        <label>Mailing State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactMailingStreet__c</fullName>
        <description>Mailing Street of Primary Authorized Agent from Project Role(From Contact Role).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Mailing Street of Primary Authorized Agent from Project Role(From Contact Role).</inlineHelpText>
        <label>Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cumulative_State_Cost_Share_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the field value is greater than 2500, then it should be checked or else should be unchecked.</description>
        <inlineHelpText>If the field value is greater than 2500, then it should be checked or else should be unchecked.</inlineHelpText>
        <label>Cumulative State Cost Share Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Created Date of the Payment Request to which the Transmittal is related.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Created Date of the Payment Request to which the Transmittal is related.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DisasterGrantFO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Disaster Grant/FO of the Project.</description>
        <inlineHelpText>Disaster Grant/FO of the Project.</inlineHelpText>
        <label>Disaster Grant/FO</label>
        <referenceTo>Funding_Opportunity__c</referenceTo>
        <relationshipLabel>Transmittals</relationshipLabel>
        <relationshipName>Transmittals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EnactmentFiscalYear__c</fullName>
        <description>Enactment Fiscal Year of the Payment Request.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enactment Fiscal Year of the Payment Request.</inlineHelpText>
        <label>Enactment Fiscal Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <description>End Date of the Project.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>End Date of the Project.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpenditurestoDate__c</fullName>
        <description>Total Federal Amount Disbursed or Total State Amount Disbursed on Project</description>
        <inlineHelpText>Total Federal Amount Disbursed or Total State Amount Disbursed on Project</inlineHelpText>
        <label>Total Amount Disbursed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FromAddress__c</fullName>
        <description>Payment Request Manager Reviewer&apos;s Address.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Payment Request Manager Reviewer&apos;s Address.</inlineHelpText>
        <label>From Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FromEmail__c</fullName>
        <description>Payment Request Manager Reviewer&apos;s Email.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Payment Request Manager Reviewer&apos;s Email.</inlineHelpText>
        <label>From Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FundingType__c</fullName>
        <description>Funding Source from Project.</description>
        <inlineHelpText>Funding Source from Project.</inlineHelpText>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Federal and State</fullName>
                </value>
                <value>
                    <fullName>Federal Only</fullName>
                </value>
                <value>
                    <fullName>State Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IncidentProjectNumber__c</fullName>
        <description>Incident Declaration Number from Project(from Incident).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Incident Declaration Number from Project(from Incident).</inlineHelpText>
        <label>Incident Project Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Subrecipient_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the &quot;Incident Subrecipient Summary&quot; record. Used while creating Transmittal for Incident - SubRecipent Closeout.</description>
        <inlineHelpText>Lookup to the &quot;Incident Subrecipient Summary&quot; record. Used while creating Transmittal for Incident - SubRecipent Closeout.</inlineHelpText>
        <label>Incident Subrecipient Summary</label>
        <referenceTo>Incident_Subrecipient_Stage__c</referenceTo>
        <relationshipLabel>Transmittals</relationshipLabel>
        <relationshipName>Transmittals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ManagerMailingCity__c</fullName>
        <description>Mailing City of the Manager Reviewer of Payment Request.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Mailing City of the Manager Reviewer of Payment Request.</inlineHelpText>
        <label>Mailing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagerMailingCountry__c</fullName>
        <description>Mailing Country of Manager Reviewer of Payment Request.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Mailing Country of Manager Reviewer of Payment Request.</inlineHelpText>
        <label>Mailing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagerMailingPostalCode__c</fullName>
        <description>Mailing Zip/Postal Code of Manager Reviewer of Payment Request.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Mailing Zip/Postal Code of Manager Reviewer of Payment Request.</inlineHelpText>
        <label>Mailing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagerMailingState__c</fullName>
        <description>Mailing State of Manager Reviewer of Payment Request.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Mailing State of Manager Reviewer of Payment Request.</inlineHelpText>
        <label>Mailing State/Province</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagerMailingStreet__c</fullName>
        <description>Mailing Street of manager Reviewer of payment Request.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Mailing Street of manager Reviewer of payment Request.</inlineHelpText>
        <label>Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_s_Phone__c</fullName>
        <description>Contact number of the Manager Reviewer of Payment Request.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Contact number of the Manager Reviewer of Payment Request.</inlineHelpText>
        <label>Manager&apos;s Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ManagersDepartment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Manager&apos;s Department</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ManagersTitle__c</fullName>
        <description>Payment Request Manager Reviewer&apos;s Title.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Payment Request Manager Reviewer&apos;s Title.</inlineHelpText>
        <label>Manager&apos;s Title</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manually_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the migrated Record is Updated Manually then this field Should be checked</description>
        <inlineHelpText>If the migrated Record is Updated Manually then this field Should be checked</inlineHelpText>
        <label>Manually Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ObligatedAgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Obligated Agency Name for which the Mutual Aid is requested.</description>
        <inlineHelpText>Obligated Agency Name for which the Mutual Aid is requested.</inlineHelpText>
        <label>Obligated Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transmittals (Obligated Agency)</relationshipLabel>
        <relationshipName>Transmittals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Offset_Payment_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Offset Payment Request, if PR&apos;s Payment Type is Offset.</description>
        <inlineHelpText>Offset Payment Request, if PR&apos;s Payment Type is Offset.</inlineHelpText>
        <label>Offset Payment Request</label>
        <referenceTo>Payment_Request__c</referenceTo>
        <relationshipLabel>Transmittals (Offset Payment Request)</relationshipLabel>
        <relationshipName>Transmittals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PR_Owner_Email__c</fullName>
        <description>Email of Payment Request owner</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Email of Payment Request owner</inlineHelpText>
        <label>PR Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PaymentDelivery__c</fullName>
        <description>Payment Delivery of Payment Request.</description>
        <inlineHelpText>Payment Delivery of Payment Request.</inlineHelpText>
        <label>Payment Delivery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Expedited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaymentRequest__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>We have made it Lookup because we are changing the owner to Queue while sending Transmittal for Approval. And in master detail relationship, PR owner will become the owner of Transmittal well.
Payment Request to which this transmittal is related.</description>
        <inlineHelpText>Payment Request to which this transmittal is related.</inlineHelpText>
        <label>Payment Request</label>
        <referenceTo>Payment_Request__c</referenceTo>
        <relationshipLabel>Transmittals</relationshipLabel>
        <relationshipName>Transmittals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentType__c</fullName>
        <description>Payment Type of the Payment Request.</description>
        <inlineHelpText>Payment Type of the Payment Request.</inlineHelpText>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advance</fullName>
                </value>
                <value>
                    <fullName>Reimbursement</fullName>
                </value>
                <value>
                    <fullName>Offset</fullName>
                </value>
                <value>
                    <fullName>Mutual Aid</fullName>
                </value>
                <value>
                    <fullName>Final Payment</fullName>
                </value>
                <value>
                    <fullName>Returned Project Payment</fullName>
                </value>
                <value>
                    <fullName>DeObligation</fullName>
                    <isActive>false</isActive>
                    <label>De Obligation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaymentUsersManager__c</fullName>
        <description>Payment Request Manager Reviewer Name</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Payment Request Manager Reviewer Name</inlineHelpText>
        <label>Payment User&apos;s Manager</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Primary Authorized Agent Phone from Project Role(From Contact Role).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Primary Authorized Agent Phone from Project Role(From Contact Role).</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PrimaryAuthorizedAgentName__c</fullName>
        <description>Primary Authorized Agent Name from Project Role(From Contact Role).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Primary Authorized Agent Name from Project Role(From Contact Role).</inlineHelpText>
        <label>Primary Authorized Agent Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Program Name of the Project.</description>
        <inlineHelpText>Program Name of the Project.</inlineHelpText>
        <label>Program Name</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Transmittals</relationshipLabel>
        <relationshipName>Transmittals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectPONumber__c</fullName>
        <description>Project Number from Project.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Project Number from Project.</inlineHelpText>
        <label>Project / PW Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project of the Payment Request.</description>
        <inlineHelpText>Project of the Payment Request.</inlineHelpText>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Transmittals</relationshipLabel>
        <relationshipName>Transmittals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_To_Withdraw__c</fullName>
        <description>Reason to Withdraw the Transmittal.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reason to Withdraw the Transmittal.</inlineHelpText>
        <label>Reason To Withdraw</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recall_Comments__c</fullName>
        <description>This field display recall reason of record</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReimbursementEndDate__c</fullName>
        <description>Reimbursement End Date of Payment Request.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reimbursement End Date of Payment Request.</inlineHelpText>
        <label>Reimbursement End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReimbursementStartDate__c</fullName>
        <description>Reimbursement Start Date of Payment Request.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Reimbursement Start Date of Payment Request.</inlineHelpText>
        <label>Reimbursement Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ServiceLocationCode__c</fullName>
        <description>Service Location From Payment Request.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Service Location From Payment Request.</inlineHelpText>
        <label>Service Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <description>Stage of the Transmittal Record.</description>
        <inlineHelpText>Stage of the Transmittal Record.</inlineHelpText>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>On hold - Cost Threshold</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                    <label>LDA In Review</label>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <label>Confirmed</label>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <description>Start Date of the Project.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Start Date of the Project.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Cost_Share_Flag__c</fullName>
        <description>This Flag is used to prevent a PR from being approved until the $2,500 threshold has been met on a project and on a sub recipient for all PA projects within that disaster.</description>
        <formula>IF( ISPICKVAL( TransmittalType__c , &apos;State&apos;) , IMAGE ( IF(  Cumulative_State_Cost_Share_Flag__c = false, &quot;/img/samples/flag_red.gif&quot;, &quot;/img/samples/flag_green.gif&quot;),&quot;Status Flag&quot;), null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This Flag is used to prevent a PR from being approved until the $2,500 threshold has been met on a project and on a sub recipient for all PA projects within that disaster.</inlineHelpText>
        <label>State Cost Share Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierID__c</fullName>
        <description>Supplier ID of the Obligating Agency.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Supplier ID of the Obligating Agency.</inlineHelpText>
        <label>Supplier ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToAddress__c</fullName>
        <description>Primary Authorized Agent Billing Address from Project Role(From Contact Role).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Primary Authorized Agent Billing Address from Project Role(From Contact Role).</inlineHelpText>
        <label>To Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ToEmail__c</fullName>
        <description>Primary Authorized Agent Email from Project Role(From Contact Role).</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Primary Authorized Agent Email  from Project Role(From Contact Role).</inlineHelpText>
        <label>To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Total_amount_Obligated__c</fullName>
        <description>&quot;Total Project Award&quot; of the Project.</description>
        <inlineHelpText>&quot;Total Project Award&quot; of the Project.</inlineHelpText>
        <label>Total amount Obligated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TransmittalType__c</fullName>
        <description>Type of Transmittal record.</description>
        <inlineHelpText>Type of Transmittal record.</inlineHelpText>
        <label>Transmittal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transmittal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DisasterGrantFO__c</columns>
        <columns>ProgramName__c</columns>
        <columns>FundingType__c</columns>
        <columns>TransmittalType__c</columns>
        <columns>Amount_Obligated__c</columns>
        <columns>Stage__c</columns>
        <columns>Approved_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Transmittals_Accounting_Team_Transmittal</fullName>
        <columns>NAME</columns>
        <columns>DisasterGrantFO__c</columns>
        <columns>ProgramName__c</columns>
        <columns>FundingType__c</columns>
        <columns>TransmittalType__c</columns>
        <columns>Amount_Obligated__c</columns>
        <columns>Stage__c</columns>
        <columns>ApprovedAmount__c</columns>
        <columns>Approved_Date__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>In Review</value>
        </filters>
        <label>Transmittals - To Review</label>
        <queue>Transmittals_Accounting_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TR-{000000}</displayFormat>
        <label>Transmittal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transmittals</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Transmittal_Withdraw_Reason_Validation</fullName>
        <active>true</active>
        <description>It prevents the user from Withdrawing the Transmittal If Payment Request is not withdrawn.</description>
        <errorConditionFormula>AND( ISCHANGED( Stage__c ) , ISPICKVAL( Stage__c , &apos;Withdrawn&apos;),  NOT( ISPICKVAL( PaymentRequest__r.Stage__c , &apos;Withdrawn&apos;) ) )</errorConditionFormula>
        <errorMessage>Transmittal cannot be Withdrawn, Please consider to withdraw your Payment Request.</errorMessage>
    </validationRules>
</CustomObject>